# CarTracking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Image.h  Video.h
src/: Image.cpp  Video.cpp
videos/: laguna_recognition.mov  moto_recognition.mov
